--- a/security/chromiumos/Makefile
+++ b/security/chromiumos/Makefile
@@ -1,3 +1,3 @@
 obj-$(CONFIG_SECURITY_CHROMIUMOS) := chromiumos_lsm.o
 
-chromiumos_lsm-y := lsm.o utils.o
+chromiumos_lsm-y := inode_mark.o lsm.o securityfs.o utils.o
